--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "cookie-parser": "^1.4.6",
+    "@upstash/redis": "^1.28.2",
+    "uuid": "^9.0.1"
   }
 }
